fix: Menu text and icon spacing

--- a/components/MenuItemExpandable.module.scss
+++ b/components/MenuItemExpandable.module.scss
@@ -5,3 +5,7 @@
 .menu > div {
   padding: 0;
 }
+
+.expandArrowContainer {
+  margin-left: auto;
+}
